INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

file(GLOB PROTO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_FILES})

add_library(proto ${PROTO_HEADER} ${PROTO_SRC})

# target_include_directories(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
# message(STATUS "proto CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")

target_include_directories(proto PUBLIC ${PROTOBUF_INCLUDE_DIRS})
target_link_libraries(proto PUBLIC ${PROTOBUF_LIBRARIES})
